# ============================================================================
# Project sources
# ============================================================================


# ============================================================================
# Target and build options
# ============================================================================

add_executable(FSMTest ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp)
target_include_directories(FSMTest PRIVATE ${PROJECT_SOURCE_DIR}/inc)

target_link_libraries (FSMTest ${PROJECT_NAME} )

# ============================================================================
# Installation
# ============================================================================